start working on ProductShow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,8 @@
       "@/redux/*": ["src/redux/*"],
       "@/types/*": ["src/types/*"],
       "@/pages/*": ["pages/*"],
-      "@/appIcons/*": ["src/assets/icons/*"],
-      "@/appImages/*": ["src/assets/images/*"],
+      "@/appIcons/*": ["public/assets/icons/*"],
+      "@/appImages/*": ["public/assets/images/*"],
       "@/constants/*": ["src/constants.ts"],
       "@/hooks/*": ["src/hooks/*"],
       "@/styles/*": ["styles/*"],
