--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "moment": "^2.29.4",
     "next": "^13.1.1",
     "next-redux-wrapper": "^8.1.0",
+    "nextjs-progressbar": "^0.0.16",
     "pluralize": "^8.0.0",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
