--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.0",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "devDependencies": {
