--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/query-string": "^6.3.0",
     "@types/react": "^18.0.26",
     "@types/react-burger-menu": "^2.8.3",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
     "@types/react-slick": "^0.23.10",
@@ -53,6 +54,7 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
     "react-google-map-picker": "^1.2.3",
