--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^3.1.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-modal": "^3.16.1",
     "react-phone-number-input": "^3.2.16",
     "react-redux": "^8.0.5",
     "react-scrollspy": "^3.4.3",
@@ -89,6 +90,7 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
     "@types/google-map-react": "^2.1.7",
+    "@types/react-modal": "^3.13.1",
     "autoprefixer": "^10.4.13",
     "call-bind": "^1.0.2",
     "function-bind": "^1.1.1",
