--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-BASE_URL=12345;
+NEXT_PUBLIC_BASE_URL=https://pages-dash.testbedbynd.com/
+NEXT_PUBLIC_X_DOMAIN=pages.testbedbynd.com
 SECRET_API_KEY=12345;
 NEXT_PUBLIC_URL="/"
 NEXT_PUBLIC_APP_VERSION="0.0.4"
