--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@sentry/nextjs": "^7.36.0",
     "@sentry/react": "^7.28.1",
+    "@svgr/webpack": "^6.5.1",
     "@types/js-cookie": "^3.0.2",
     "@types/jsonwebtoken": "^9.0.0",
     "@types/lodash": "^4.14.191",
@@ -49,6 +50,7 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "next": "^13.1.1",
+    "next-images": "^1.8.4",
     "next-redux-wrapper": "^8.1.0",
     "nextjs-progressbar": "^0.0.16",
     "pluralize": "^8.0.0",
