--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-modal": "^3.16.1",
     "react-phone-number-input": "^3.2.16",
     "react-redux": "^8.0.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-scrollspy": "^3.4.3",
     "react-select": "^5.7.0",
     "react-share": "^4.4.1",
