--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress-ui": "cypress open"
   },
   "dependencies": {
     "@emotion/memoize": "^0.8.0",
@@ -40,6 +41,7 @@
     "@types/redux-logger": "^3.0.9",
     "@types/redux-saga": "^0.10.5",
     "clsx": "^1.2.1",
+    "cypress": "^12.6.0",
     "date-fns": "^2.29.3",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
