--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "redux-saga": "^1.2.2",
     "sharp": "^0.31.3",
     "slick-carousel": "^1.8.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.0",
     "yarn": "^1.22.19",
