--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+sentry.client.config.ts
+sentry.edge.config.ts
+sentry.server.config.ts
