--- a/.env.production
+++ b/.env.production
@@ -1,10 +1,6 @@
-NEXT_PUBLIC_BASE_URL=https://mybusiness.getq.me/
+# NEXT_PUBLIC_BASE_URL=https://mybusiness.getq.me/
+NEXT_PUBLIC_BASE_URL=https://pages-dash.testbedbynd.com/
 SECRET_API_KEY=12345;
 NEXT_PUBLIC_URL="/"
-<<<<<<< HEAD
 NEXT_PUBLIC_APP_VERSION="0.0.42"
 NEXT_PUBLIC_SENTRY_DEV="https://dc828a46da5e4e2f93a9a1b1e320ea98@o484098.ingest.sentry.io/4504621812154368"
-=======
-NEXT_PUBLIC_APP_VERSION="0.0.39"
-NEXT_PUBLIC_SENTRY_DEV="https://f2a88ef92fbd4eefb8b5a4aeeb916abc@o484098.ingest.sentry.io/4504803502653440"
->>>>>>> prod
